5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1643_1053.log
== TEST (2019-04-08 19:42:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= input("o que voce é?")
if (c==cervo):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (c==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:42:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= input("o que voce e?")
if (c==cervo):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (c==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:43:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= input("o que voce e?")
if (c==c):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(c)
-- OUTPUT:
cervo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:43:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= input("o que voce e?")
if (c==c):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(c)
-- EXECUTION TIME:
0.205257
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:44:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono==cervo):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(patrono)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:44:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono==c):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(patrono)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono==c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:44:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
c=cervo
if (patrono==c):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(patrono)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:45:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono==c):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(patrono)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono==c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:46:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=='cervo'):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(patrono)
-- OUTPUT:
cervo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:46:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=='cervo'):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(patrono)
-- EXECUTION TIME:
0.213972
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:47:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(patrono)
-- OUTPUT:
cervo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:47:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:47:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(mensagem)
-- EXECUTION TIME:
0.19512
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:47:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:49:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'patrono''nao eh patrono do Harry Potter'
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:49:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'patrono'+'nao eh patrono do Harry Potter'
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:49:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= patrono nao eh patrono do Harry Potter'
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem= patrono nao eh patrono do Harry Potter'
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:49:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= patrono nao eh patrono do Harry Potter'
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem= patrono nao eh patrono do Harry Potter'
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:49:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= patrono 'nao eh patrono do Harry Potter'
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem= patrono 'nao eh patrono do Harry Potter'
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:49:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= patrono 'nao eh patrono do Harry Potter'
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem= patrono 'nao eh patrono do Harry Potter'
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:50:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= 'nao eh patrono do Harry Potter'
print('patrono' mensagem)
-- ERROR:
File "XXXX", line 9
    print('patrono' mensagem)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:51:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= ' nao eh patrono do Harry Potter'
print(patrono.append(mensagem))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(patrono.append(mensagem))
AttributeError: 'str' object has no attribute 'append'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:51:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= ' nao eh patrono do Harry Potter'
print(patrono.Append(mensagem))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(patrono.Append(mensagem))
AttributeError: 'str' object has no attribute 'Append'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:52:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= ' nao eh patrono do Harry Potter'
print(patrono.append(mensagem))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(patrono.append(mensagem))
AttributeError: 'str' object has no attribute 'append'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:53:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= ' nao eh patrono do Harry Potter'
print(patrono + mensagem)
-- EXECUTION TIME:
0.170635
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervocervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:53:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= 'cervo eh patrono do Harry Potter'
else:
	mensagem= ' nao eh patrono do Harry Potter'
print(patrono + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:53:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("o que voce e?")
if (patrono=="cervo"):
	mensagem= ' eh patrono do Harry Potter'
else:
	mensagem= ' nao eh patrono do Harry Potter'
print(patrono + mensagem)
-- EXECUTION TIME:
0.143549
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
